--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # If you run "mix test --cover", coverage assets end up here.
 /cover
 
+#Node module
+/node_modules
+
 # The directory Mix downloads your dependencies sources to.
 /deps
 
